--- a/app/app/src/pages/index.astro
+++ b/app/app/src/pages/index.astro
@@ -1,14 +1,15 @@
 ---
 import Layout from '~/layouts/Layout.astro'
 import AppForm from '~/components/AppForm.svelte'
+import Footer from '~/components/Footer.astro'
 ---
 
 <Layout
 	bodyClass="bg-gray-100 h-screen"
 >
 
-	<div class="flex justify-center items-center min-h-full overflow-y p-8">
-		<div class="bg-white shadow-lg rounded-lg p-6 min-w-[800px] m-auto">
+	<div class="flex flex-col justify-center items-center min-h-full overflow-y gap-8 p-8">
+		<div class="bg-white shadow-lg rounded-lg p-6 min-w-[800px]">
 			<h1 class="text-4xl font-bold mb-4">Env Converter</h1>
 			<p class="text-gray-600 mb-4">
 				Online conversion tool for env files.
@@ -16,6 +17,8 @@ import AppForm from '~/components/AppForm.svelte'
 
 			<AppForm class="home text-black group-hover:text-gray" client:load />
 		</div>
+
+		<Footer class="min-w-[800px]" />
 	</div>
 
 </Layout>
