--- a/app/app/src/pages/index.astro
+++ b/app/app/src/pages/index.astro
@@ -9,13 +9,16 @@ import Footer from '~/components/Footer.astro'
 >
 
 	<div class="flex flex-col justify-center items-center min-h-full overflow-y gap-8 p-8 w-full max-w-[800px] mx-auto">
-		<div class="bg-white shadow-lg rounded-lg p-6 w-full">
-			<h1 class="text-4xl font-bold mb-4">Env Converter</h1>
-			<p class="text-gray-600 mb-4">
+		<div class="bg-white shadow-lg rounded-lg p-6 w-full space-y-4">
+			<div class="flex items-start justify-between">
+				<h1 class="text-4xl font-bold">Env Converter</h1>
+				<div>Placeholder</div>
+			</div>
+			<p class="text-gray-600">
 				Online conversion tool for env files.
 			</p>
 
-			<AppForm class="home text-black group-hover:text-gray" client:load />
+			<AppForm class="home text-black group-hover:text-gray mt-4" client:load />
 		</div>
 
 		<Footer class="w-full" />
