--- a/app/app/src/pages/index.astro
+++ b/app/app/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from '~/layouts/Layout.astro'
+import LocaleSwitch from '~/components/LocaleSwitch.astro'
 import AppForm from '~/components/AppForm.svelte'
 import Footer from '~/components/Footer.astro'
 ---
@@ -12,7 +13,7 @@ import Footer from '~/components/Footer.astro'
 		<div class="bg-white shadow-lg rounded-lg p-6 w-full space-y-4">
 			<div class="flex items-start justify-between">
 				<h1 class="text-4xl font-bold">Env Converter</h1>
-				<div>Placeholder</div>
+				<LocaleSwitch />
 			</div>
 			<p class="text-gray-600">
 				Online conversion tool for env files.
