Update opacity in locale switch

--- a/app/app/src/components/LocaleSwitch.astro
+++ b/app/app/src/components/LocaleSwitch.astro
@@ -61,13 +61,14 @@ const localeMetadata: {
 	.locale {
 		@apply
 			text-2xl
-			active:opacity-70
+			opacity-40
+			hover:opacity-60
+			active:opacity-80
 			;
 
 		&.current {
 			@apply
-				opacity-50
-				active:opacity-20
+				opacity-100
 				;
 		}
 	}
