--- a/app/app/src/pages/index.astro
+++ b/app/app/src/pages/index.astro
@@ -3,6 +3,9 @@ import Layout from '~/layouts/Layout.astro'
 import LocaleSwitch from '~/components/LocaleSwitch.astro'
 import AppForm from '~/components/AppForm.svelte'
 import Footer from '~/components/Footer.astro'
+
+import { i18nFactory } from '~/i18n'
+const _ = i18nFactory(Astro.currentLocale as any)
 ---
 
 <Layout
@@ -12,14 +15,16 @@ import Footer from '~/components/Footer.astro'
 	<div class="flex flex-col justify-center items-center min-h-full overflow-y gap-8 p-8 w-full max-w-[800px] mx-auto">
 		<div class="bg-white shadow-lg rounded-lg p-6 w-full space-y-4">
 			<div class="flex items-start justify-between">
-				<h1 class="text-4xl font-bold">Env Converter</h1>
+				<h1 class="text-4xl font-bold">
+					Env Converter
+				</h1>
 				<LocaleSwitch />
 			</div>
 			<p class="text-gray-600">
-				Online conversion tool for env files.
+				{_('Online conversion tool for environment files.')}
 			</p>
 
-			<AppForm class="home text-black group-hover:text-gray mt-4" client:load />
+			<AppForm class="home text-black group-hover:text-gray mt-4" locale={Astro.currentLocale} client:load />
 		</div>
 
 		<Footer class="w-full" />
