--- a/app/app/src/components/Footer.astro
+++ b/app/app/src/components/Footer.astro
@@ -25,7 +25,7 @@ const buildVersion = githubSha ? githubSha.slice(0, 7) : 'dev'
 		</h3>
 		<p>
 			<span class="icon-[mdi--github] align-icon-inline"></span>
-			<Fragment set:html={_('See the source code on {0}', `<a href={${githubRepositoryUrl ?? '#'}}>GitHub</a>`)} />
+			<Fragment set:html={_('See the source code on {0}', `<a href="${githubRepositoryUrl ?? '#'}">GitHub</a>`)} />
 			<small>(v. {buildVersion})</small>
 		</p>
 		<p>
