--- a/app/app/src/components/Footer.astro
+++ b/app/app/src/components/Footer.astro
@@ -62,12 +62,17 @@ footer {
 		flex-wrap
 		justify-around
 		items-start
+		space-y-8
+		sm:space-y-0
 		;
 
 	> div {
 		@apply
-			max-w-[50%]
+			w-full
+			sm:w-auto
+			sm:max-w-[50%]
 			space-y-2
+
 			;
 
 		h3 {
