--- a/app/app/src/pages/index.astro
+++ b/app/app/src/pages/index.astro
@@ -12,7 +12,7 @@ const _ = i18nFactory(Astro.currentLocale as any)
 	bodyClass="bg-gray-100 h-screen"
 >
 
-	<div class="flex flex-col justify-center items-center min-h-full overflow-y gap-8 p-8 w-full max-w-[800px] mx-auto">
+	<div class="flex flex-col justify-center items-center min-h-full overflow-y gap-8 p-8 w-full max-w-[calc(1000px+2*2rem)] mx-auto">
 		<div class="bg-white shadow-lg rounded-lg p-6 w-full space-y-4">
 			<div class="flex items-start justify-between">
 				<h1 class="text-4xl font-bold">
