Fix style lang in footer

--- a/app/app/src/components/Footer.astro
+++ b/app/app/src/components/Footer.astro
@@ -55,7 +55,7 @@ const buildVersion = githubSha ? githubSha.slice(0, 7) : 'dev'
 	</div>
 </footer>
 
-<style>
+<style lang="scss">
 footer {
 	@apply
 		flex
