Update astro site to v5 & packages (#28)

--- a/app/app/src/layouts/Layout.astro
+++ b/app/app/src/layouts/Layout.astro
@@ -1,52 +1,24 @@
 ---
+import { site } from '~/site'
 import Base from '~/layouts/Base.astro'
 import type { Props as BaseProps } from '~/layouts/Base.astro'
-
-import { i18nFactory } from '~/i18n'
-const _ = i18nFactory(Astro.currentLocale as any)
 
 export interface Props extends Omit<BaseProps, 'title'>
 {
 	title?: BaseProps['title']
-	noScripts?: boolean
-}
-
-const {
-	title,
-} = Astro.props
-
-interface Site
-{
-	title?: string
-	description?: string
-	author?: string
-	themeColor?: string
-}
-
-const site: Site = {
-	title: 'Env Converter',
-	description: _('Online conversion tool for environment files.'),
-	author: 'Matiboux',
-	themeColor: '#ffffff',
-}
-
-if (site.title === undefined && Astro.props.title === undefined)
-{
-	throw new Error('Title is undefined')
 }
 
 const baseProps: BaseProps = {
 	...Astro.props,
-	title: title
-		? (site.title
-			? `${title} – ${site.title}`
-			: title
-		)
+	title: Astro.props.title
+		? (site.title ? `${Astro.props.title} – ${site.title}` : Astro.props.title)
 		: (site.title || ''),
-	description: Astro.props.description || site.description,
-	author: Astro.props.author || site.author,
-	themeColor: Astro.props.themeColor || site.themeColor,
-	favicon: Astro.props.favicon, // || favicon,
+	description: Astro.props.description || site.description || undefined,
+	author: Astro.props.author || site.author || undefined,
+	keywords: Astro.props.keywords || site.keywords || undefined,
+	themeColor: Astro.props.themeColor || site.themeColor || undefined,
+	favicon: Astro.props.favicon || site.favicon || undefined,
+	lang: Astro.props.lang || site.lang || undefined,
 }
 ---
 
