Fix props lang type

--- a/app/app/src/layouts/Base.astro
+++ b/app/app/src/layouts/Base.astro
@@ -11,7 +11,7 @@ import '~/styles/style.scss'
 export interface Props
 {
 	// HTML attributes
-	lang?: string
+	lang?: string | undefined
 	htmlClass?: string | undefined
 	htmlAttributes?: { [key: string]: string }
 	// Meta tags
