--- a/app/app/src/layouts/Base.astro
+++ b/app/app/src/layouts/Base.astro
@@ -1,7 +1,7 @@
 ---
 import type { ImageMetadata } from 'astro'
 
-import { I18nKeys } from '~/i18n/type'
+import type { I18nKeys } from '~/i18n/type'
 
 import { i18nFactory } from '~/i18n'
 const _ = i18nFactory(Astro.currentLocale as any)
@@ -39,8 +39,8 @@ const description = typeof Astro.props.description !== 'string' && Astro.props.d
 
 const formatsToType = {
 	'ico': 'image/x-icon',
-	'jpeg': 'image/jpeg',
 	'jpg': 'image/jpeg',
+	'jpeg': 'image/jpeg',
 	'png': 'image/png',
 	'tiff': 'image/tiff',
 	'webp': 'image/webp',
