--- a/app/app/src/layouts/Base.astro
+++ b/app/app/src/layouts/Base.astro
@@ -1,7 +1,7 @@
 ---
 import type { ImageMetadata } from 'astro'
 
-import { I18nKeys } from '~/i18n/type'
+import type { I18nKeys } from '~/i18n/type'
 
 import { i18nFactory } from '~/i18n'
 const _ = i18nFactory(Astro.currentLocale as any)
@@ -11,7 +11,7 @@ import '~/styles/style.scss'
 export interface Props
 {
 	// HTML attributes
-	lang?: string
+	lang?: string | undefined
 	htmlClass?: string | undefined
 	htmlAttributes?: { [key: string]: string }
 	// Meta tags
@@ -34,13 +34,13 @@ export interface Props
 	bodyAttributes?: { [key: string]: string }
 }
 
-const description = typeof Astro.props.description !== 'string'
+const description = typeof Astro.props.description !== 'string' && Astro.props.description !== undefined
 	? _(Astro.props.description) : Astro.props.description
 
 const formatsToType = {
 	'ico': 'image/x-icon',
-	'jpeg': 'image/jpeg',
 	'jpg': 'image/jpeg',
+	'jpeg': 'image/jpeg',
 	'png': 'image/png',
 	'tiff': 'image/tiff',
 	'webp': 'image/webp',
