Update astro site files

--- a/app/app/src/components/Footer.astro
+++ b/app/app/src/components/Footer.astro
@@ -20,42 +20,44 @@ const buildVersion = githubSha ? githubSha.slice(0, 7) : 'dev'
 >
 	<div>
 		<h3>
-			<span class="icon-[mdi--code-braces] align-icon-inline"></span>
+			<span class="icon-[mdi--code-braces] icon-align"></span>
 			{_('Open source project')}
 		</h3>
 		<p>
-			<span class="icon-[mdi--github] align-icon-inline"></span>
+			<span class="icon-[mdi--github] icon-align"></span>
 			<Fragment set:html={_('See the source code on {0}', `<a href="${githubRepositoryUrl ?? '#'}">GitHub</a>`)} />
 			<small>(v. {buildVersion})</small>
 		</p>
 		<p>
-			<span class="icon-[mdi--fire] align-icon-inline"></span>
+			<span class="icon-[mdi--fire] icon-align"></span>
 			<Fragment set:html={_('Built with {0}, served by {1}', '<a href="https://astro.build/">Astro</a>', '<a href="https://pages.github.com/">GitHub Pages</a>')} />
 		</p>
 		<p>
-			<span class="icon-[mdi--heart] align-icon-inline text-red-500"></span>
+			<span class="icon-[mdi--heart] icon-align text-red-500"></span>
 			<Fragment set:html={_('Made with love by {0}', '<a href="https://matiboux.me/">Matiboux</a>')} />
 		</p>
 	</div>
 
 	<div>
 		<h3>
-			<span class="icon-[mdi--security-lock] align-icon-inline"></span>
+			<span class="icon-[mdi--security-lock] icon-align"></span>
 			{_('Data privacy')}
 		</h3>
 		<p>
-			<span class="icon-[mdi--server-network-off] align-icon-inline"></span>
+			<span class="icon-[mdi--server-network-off] icon-align"></span>
 			{_('No data is collected or processed over the network or on any server.')}
 			{_('All data is processed locally in your browser, and stays on your own device.')}
 		</p>
 		<p>
-			<span class="icon-[mdi--cookie-off] align-icon-inline"></span>
+			<span class="icon-[mdi--cookie-off] icon-align"></span>
 			{_('This website uses no cookies and does no tracking.')}
 		</p>
 	</div>
 </footer>
 
-<style>
+<style lang="scss">
+@reference "tailwindcss/theme";
+
 footer {
 	@apply
 		flex
