Remove unused imports

--- a/app/app/src/components/LocaleSwitch.astro
+++ b/app/app/src/components/LocaleSwitch.astro
@@ -1,6 +1,5 @@
 ---
-import { i18n as i18nConfig } from '~/config'
-import { getUrlWithoutLocale, getLocaleUrlList } from '~/i18n'
+import { getLocaleUrlList } from '~/i18n'
 
 export interface Props
 {
