--- a/app/app/src/components/Footer.astro
+++ b/app/app/src/components/Footer.astro
@@ -26,20 +26,20 @@ const buildVersion = githubSha ? githubSha.slice(0, 7) : 'dev'
 		<p>
 			<span class="icon-[mdi--github] icon-align"></span>
 			{_('See the source code on')}
-<a href={githubRepositoryUrl ?? '#'}>GitHub</a>
+			<a href={githubRepositoryUrl ?? '#'}>GitHub</a>
 			<small>(v. {buildVersion})</small>
 		</p>
 		<p>
 			<span class="icon-[mdi--fire] icon-align"></span>
 			{_('Built with')}
-<a href="https://astro.build/">Astro</a>,
+			<a href="https://astro.build/">Astro</a>,
 			{_('served by')}
-<a href="https://pages.github.com/">GitHub Pages</a>
+			<a href="https://pages.github.com/">GitHub Pages</a>
 		</p>
 		<p>
 			<span class="icon-[mdi--heart] icon-align text-red-500"></span>
 			{_('Made with love by')}
-<a href="https://matiboux.me/">Matiboux</a>
+			<a href="https://matiboux.me/">Matiboux</a>
 		</p>
 	</div>
 
@@ -91,13 +91,8 @@ footer {
 		a {
 			@apply
 				text-blue-500
+				hover:text-blue-700 hover:underline
 				;
-
-			&:hover {
-				@apply
-					text-blue-700
-					;
-			}
 		}
 
 		b {
